--- a/client/css/custom.scss
+++ b/client/css/custom.scss
@@ -97,9 +97,9 @@ $c-text: #a1a4ae;
 		color: #fff;
 		border-radius: 20px;
 		font-weight: bold;
-		padding: 6px 20px;
+		padding: 8px 25px;
 		background: $c7;
-		font-size: 14px;
+		// font-size: 14px;
 		&:hover {
 			box-shadow: 11px 0 21px rgb(55 173 218 / 35%);
 		}
@@ -238,17 +238,18 @@ svg {
 		}
 		label {
 		    height: 100%;
-			
 		}
 		img {
 			cursor: pointer;
 			width: 100%;
 			padding: 8px;
-
+			
 		}
 	}
 	input[type="radio"]:checked + label {
-	    box-shadow: 0 2px 6px #ddd;
+		// box-shadow: 0 2px 6px #ddd;
+		border-radius: 12px;
+		border: 2px solid $c7;
 	}
 	@media (max-width: 500px) {
 		.button  {
@@ -281,7 +282,9 @@ svg {
 	}
 
 	input[type="radio"]:checked + label {
-	    box-shadow: 0 2px 6px #ddd;
+	    // box-shadow: 0 2px 6px #ddd;
+		border-radius: 12px;
+		border: 2px solid $c7;
 	}
 	@media (max-width: 500px) {
 
